[workspace]
members = [
    "plugin_wasm",
    "plugin_wasm_test_model_full",
    "plugin_wasm_test_motion_full",
    "plugin_wasm_test_model_minimum",
    "plugin_wasm_test_motion_minimum",
    "protobuf",
]
default-members = ["plugin_wasm", "protobuf"]

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
