[workspace]
resolver = "2"
members = [
    "plugin_wasm",
    "plugin_wasm_test_model_full",
    "plugin_wasm_test_motion_full",
    "plugin_wasm_test_model_minimum",
    "plugin_wasm_test_motion_minimum",
    "protobuf",
]
default-members = ["plugin_wasm"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release-lto]
inherits = "release"
lto = true
strip = true
codegen-units = 1
opt-level = "s"
panic = "abort"
