[workspace]
resolver = "2"
members = [
    "plugin_wasm",
    "plugin_wasm_test_model_full",
    "plugin_wasm_test_motion_full",
    "plugin_wasm_test_model_minimum",
    "plugin_wasm_test_motion_minimum",
    "protobuf",
]
default-members = ["plugin_wasm"]

[workspace.package]
authors = ["hkrn <129939+hkrn@users.noreply.github.com>"]
edition = "2021"
license = "MPL-2.0"
rust-version = "1.74"
version = "35.0.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release-lto]
inherits = "release"
lto = true
strip = true
codegen-units = 1
opt-level = "s"
panic = "abort"
